[package]
name = "speakstream"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-openai = "0.25.0"
async-std = "1.12.0"
colored = "2.0"
flume = "0.11"
rodio = "0.17.3"
cpal = "0.15.2"
once_cell = "1.19.0"
tempfile = "3.8"
tracing = "0.1"
futures = "0.3"
tokio = { version = "1.29.0", features = ["macros", "rt-multi-thread"] }
